0.17.5
 - fix: error handling when connection to server fails on download (#75)
 - enh: add `CKANAPI.hostname`
 - ref: replace `user_list` with `user_autocomplete`
 - ref: replace `search_dataset` with `search_dataset_via_api`
   in `APIInterrogator`; `search_dataset` is now only free text search.
0.17.4
 - fix: correctly handle dataset IDs and names in `DBExtract`
 - fix: `get_datasets_user_shared` failed when many circles/collections exist
 - enh: improve "anonymous" GUI experience (no busy cursor, disable tabs)
 - enh: allow to disable update check on startup via settings
 - enh: apply button in upload settings only affects cache location
 - enh: move "apply" button in downloads settings next to "browse" button
 - ref: remove unnecessary custom signals for preferences dialog
 - ref: reorder and rename internal settings dialog methods
 - ref: decorate PyQtSlots
 - tests: restore previous users settings after testing
0.17.3
 - fix: drag'n'drop to DCscope broken since 0.17.0 (#88)
 - fix: show long resource names with elide-middle and tool tip (#89)
 - fix: error message dialog limited to traceback length of three
 - fix: copy error text to clipboard did not work in error message dialog
 - enh: allow specifying collections in upload task files and via the API
 - docs: increase warning threshold for max number of resources to 1000
   (CKAN 2.11.3 handles datasets with many resources much better)
0.17.2
 - fix: not all resource name edits were recognized in upload dialog (#84)
 - fix: check for existence of DC resources before starting uploads (#85)
 - enh: functionalize resource name reset button (#84)
 - enh: sort resources according to internal basin dependencies (#79)
 - enh: warn user about too many resources in a dataset (#86)
 - reg: do not always add directory name to resource name in upload dialog
 - ref: use more f-strings
 - ref: add `common.is_dc_file` for consistent resource checks
0.17.1
 - fix: found culprit of regular segmentation faults (#14)