@@ -1,6 +1,7 @@
 0.17.5
  - fix: error handling when connection to server fails on download (#75)
  - enh: add `CKANAPI.hostname`
+ - enh: sort search results by creation date instead of score and modified date
  - ref: replace `user_list` with `user_autocomplete`
  - ref: replace `search_dataset` with `search_dataset_via_api`
    in `APIInterrogator`; `search_dataset` is now only free text search.
